--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,20 +1,21 @@
 
 body {
-    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    font-family: "Poppins", sans-serif; 
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
 }
 
 header {
-    background-color: #333;
+    background-color: #3233FA;
     color: white;
     padding: 20px;
     text-align: center;
 }
 
 h1 {
-    font-family: Impact, Charcoal, sans-serif;
+    font-family:"Playwrite DE Grund",
 }
 
 .personal-info {
