I fixed an error with targeting multiple elements at once. I didn't have comments between the three elements

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -2,8 +2,10 @@
     max-width: 1600px;
     margin: 0 auto;
 }
-nav #hero #home-grid {
+nav, #hero, #home-grid {
     text-align: center;
+    background-color: black;
+    
 }
 
 
