--- a/ice/styles/ice6.css
+++ b/ice/styles/ice6.css
@@ -1,7 +1,7 @@
 
 .grid-container{
     display: grid;
-    grid-template-columns:auto auto;
+    grid-template-columns:1fr 1fr;
 }
 .grey{
     background-color: rgb(159, 157, 157);
