--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -21,50 +21,38 @@
     --nav-background-color: #43FA65;
     --nav-hover-link-color: white;
     --nav-hover-background-color: #396E94;
-  }
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-}
-nav, #hero, .home-grid {
-    
-    background-color:var(--accent3-color);
-    font-family: var(--heading-font);
-    text-align: center;
-}
-.button-box a {
-    text-align: center;
-}
-#logo-link {
-    padding-top: 5px;
-}
-.home-grid{
-    text-align: center;
 }
 
-.background {
-    height: 725px;
-}
 body {
+    font-family: var(--paragraph-font);
     background-color: #FA7832;
     color: black;
     font-size: 22px;
     margin:0;
     padding: 0;
 }
-h2 {
-    margin: 0;
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
 }
-.rivers-card, .camping-card, .reapids-card {
-    margin: 200px 0;
-}
-
 header {
     background-color: #FAA646;
-    color: white;
+    color: rgba(11, 1, 1, 0.879);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
-.logo{
-    width: 80px;
+#logo-link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+    
+}
+.logo {
+    width: 75px;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a{
     color: black;
@@ -75,19 +63,42 @@ nav a:hover {
     background-color:#FAC761;
     color: black;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+    text-align: center;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-img{
+    width: 100%;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 .home-title{
-    color: black;
+    color: white;
     font-family: var(--paragraph-font);
     font-size: 2em;
     text-align: center;
     margin-top: 10px;
 }
 h4{
-    color: black;
+    color:white;
+    text-align: center;
+}
+.button-box a {
     text-align: center;
 }
 .book, .join {
-    background-color:gray;
+    background-color:white;
     color: black;
     text-decoration: none;
     font-size: 18px;
@@ -95,10 +106,73 @@ h4{
     margin-top: 50px;
     border-radius: 5px;
     text-align: center;
+   
     
+}
+/* I have organized all of Css elements up until this point*/
+
+.home-grid{
+    text-align: center;
+    display: grid;
+    grid-template-columns:repeat(10,1fr);
+
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px;
+    justify-items: center;
+}
+.icon {
+    width: 80px ;
+    padding-top: 10px;
+}
+h2 {
+    margin: 0;
 }
 .card-img {
     border: 10px solid black;
+    transition: tranform .5s;
+    box-shadow: 5px 5px 10px #6f7364 ;
+    max-width: 400px;
+}
+.card-img:hover {
+    opacity: .8;
+    transform: scale(1.1);
+}
+.mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+    background-color:#FAED61;
+    height: 725px;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.msg {
+    background-color:#FAD68E;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .book:hover, .join:hover {
     background-color:rgb(163, 38, 38);
@@ -115,21 +189,15 @@ h4{
 main section img {
     box-sizing: border-box;
 }
-#background {
-    background-color:#FAED61;
-}
-.msg {
-    background-color:#FAD68E;
-    line-height: 1.5em;
-    padding: 35px;
-}
 footer {
     background-color: #FAC761;
     font-size: 1.2em;
     color: black;
     margin-top: 200px;
     padding: 25px 50px;
-    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a{
     color: black;
@@ -138,16 +206,54 @@ footer a{
 footer a:hover{
     color: black;
 }
-#hero-img{
-    width: 100%;
-}
-.icon{
-    width: 80px ;
-    padding-top: 10px;
-}
+
 footer p a:hover{
     text-decoration: underline;
 }
 footer .social img {
     padding-top: 15px;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+        max-width: fit-content;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
