--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -213,6 +213,11 @@ footer p a:hover{
 footer .social img {
     padding-top: 15px;
 }
+#wire {
+    width:80%;
+    display: block;
+    margin: auto auto;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
