--- a/ice/styles/ice9.css
+++ b/ice/styles/ice9.css
@@ -3,12 +3,14 @@ body{
     max-width:300px;
     margin:10px auto 10px auto;
     background-color: black;
+
 }
 .background{
+    overflow: hidden;
     background-color: white;
-    border-radius: 15px;
+    border-radius: 5px;
 }
-#bridge {
+.bridge {
     width: 100%;
 }
 #h3text {
@@ -20,26 +22,31 @@ body{
 }
 #paragraph{
     color: grey;
+    padding: 0 40px 0 40px;
 
 }
 .items{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 33% 33% 34%;
     background-color: rgba(59, 83, 154, 0.982);
     color: rgba(255, 255, 255, 0.866);
+    
     
 }
 .box1{
     border-radius: 5px;
     border: 1px solid gray;
+    padding-bottom: 10px;
 }
 .box2{
     border-radius: 5px;
-   border: 1px solid gray;
+    border: 1px solid gray;
+    padding-bottom: 10px; 
 }
 .box3{
     border-radius: 5px;
     border: 1px solid gray;
+    padding-bottom: 10px;
 }
 .grid1{
     grid-column: 1/2;
