--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -230,10 +230,15 @@ footer .social img {
 }
 .main_photo2{
     border: 8px solid black;
+    max-width: 60%;
 
 }
 .p2{
+    padding: 0 20% 0;
 
+}
+.pspecial{
+    text-decoration: underline;
 }
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
